WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284745
UnifiedPDF: Scrolled contents layer is added to incorrect parent layer
https://bugs.webkit.org/show_bug.cgi?id=284745
Summary
UnifiedPDF: Scrolled contents layer is added to incorrect parent layer
Kimmo Kinnunen
Reported
2024-12-16 05:20:04 PST
UnifiedPDF: Scrolled contents layer is added to incorrect parent layer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-16 05:21:06 PST
<
rdar://problem/141542665
>
Kimmo Kinnunen
Comment 2
2024-12-16 05:23:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38010
EWS
Comment 3
2024-12-19 23:55:30 PST
Committed
288152@main
(58ba97a910d5): <
https://commits.webkit.org/288152@main
> Reviewed commits have been landed. Closing PR #38010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug