UnifiedPDF: Scrolled contents layer is added to incorrect parent layer https://bugs.webkit.org/show_bug.cgi?id=284745 rdar://141542665

Reviewed by Abrar Rahman Protyasha and Simon Fraser.

Scrolled contents should go to "UnifiedPDFPlugin scrolled contents"
layer. This layer was empty.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::ensureLayers):

Canonical link: https://commits.webkit.org/288152@main